fix: single-post-item  title and desc spacing

--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -865,7 +865,7 @@
     align-items: center;
     gap: 40px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     flex-wrap: wrap;
 
     @media only screen and (min-width: 0px) and (max-width: 424px) {
